# handbrakemcp

./: .coverage  .env.example  .gitignore  .mcpbignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CI-CD-README.md  CLAUDE.md  COMPLETION_NOTE.md  Dockerfile  INSTALL.md  PLAN.md  README.md  README_DXT.md  SECURITY.md  STATUS_20250727.md  TASK_NOTE.md  docker-compose.yml  dxt_build.py  error.txt  glama.yml  justfile  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.ps1  setup_git.ps1  start.bat  start.ps1  start.ps1.bak.20260508_202350  test_mcp.py  test_server.py  test_stdio.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  glama-webhook.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/apps/: glama-github-app.yml
.github/profile/: README.md
.github/workflows/: build-mcpb.yml  ci.yml  community-health.yml  dependency-updates.yml  docker.yml  docs.yml  release-orchestration.yml  release-validation.yml  version-management.yml
docs/: GITHUB_SETUP_REPORT.md  MCP_PRODUCTION_CHECKLIST.md  PROJECT_STATUS_REPORT.md  REPOSITORY_STATUS_REPORT_2025.md  hooks.py  index.md  installation.md
docs/glama-platform/: CI_CD_GLAMA_OPTIMIZATION_GUIDE.md  GLAMA_AI_OPTIMIZATION_SUMMARY.md  GLAMA_AI_PLATFORM.md  GLAMA_AI_RESCAN_GUIDE.md  GLAMA_GITHUB_APP_SETUP.md  GLAMA_GITHUB_APP_SETUP_GUIDE.md  GLAMA_INTEGRATION.md  GLAMA_RESCAN_EMAIL.txt  GOLD_STATUS_UPDATE_2025_10_08.md  GOLD_STATUS_VERIFICATION.md  README.md  REPOSITORY_SETTINGS_UPDATE.md
docs/mcpb-packaging/: MCPB_HANDBRAKE_IMPLEMENTATION_SUMMARY.md
dxt/: README-VENV.md  README.md  activate-venv.ps1  activate-venv.sh  requirements-dxt.txt  setup-venv.py  test-venv.py
dxt/docs/: building_guide.md  packaging.md
dxt/scripts/: build.ps1  build.py
k8s/: configmap.yml  deployment.yml  ingress.yml  pvc.yml  service.yml
mcpb/: build-mcpb-package.ps1
monitoring/: prometheus.yml
native/: build.ps1
scripts/: deploy.py  run_tests.py  setup-ci.py
skills/handbrake-expert/: SKILL.md
src/handbrake_mcp/: __init__.py  main.py  mcp_tools.py  server.py  stdio_main.py  transport.py
src/handbrake_mcp/api/v1/endpoints/: __init__.py
src/handbrake_mcp/core/: config.py
src/handbrake_mcp/services/: handbrake.py  notification_service.py  processing_service.py  watch_service.py
src/handbrake_mcp/tools/: __init__.py  agentic_workflow.py  handbrake_tools.py  help_tools.py  status_tools.py  utility_tools.py
tests/: conftest.py  test_dxt_packaging.py  test_handbrake.py
tools/: dxt_generator.py
web_sota/: index.html  start.ps1  vite.config.ts
web_sota/src/: App.tsx  index.css
web_sota/src/common/: FleetCard.tsx  apps-catalog.ts
web_sota/src/components/layout/: app-layout.tsx  logger-panel.tsx  sidebar.tsx  topbar.tsx
web_sota/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  help.tsx  settings.tsx  status.tsx  tools.tsx  transcode.tsx
