[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handbrake-mcp"
version = "1.1.1"
description = "HandBrake MCP Server for video transcoding"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.11.7",
    "python-dotenv>=0.19.0",
    "watchdog>=2.1.6",
    "fastmcp>=3.4.2,<4",
    "httpx>=0.23.0",
    "psutil>=5.8.0",
    "ruff>=0.15.2",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.1.0",
    "prefab-ui>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.7b0",
    "isort>=5.9.0",
    "mypy>=0.910",
    "types-python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/handbrake-mcp"
Documentation = "https://github.com/sandraschi/handbrake-mcp#readme"
Issues = "https://github.com/sandraschi/handbrake-mcp/issues"
Source = "https://github.com/sandraschi/handbrake-mcp"

[project.scripts]
handbrake-mcp-stdio = "handbrake_mcp.server:run"
handbrake-mcp = "handbrake_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v --cov=handbrake_mcp --cov-report=term-missing"
markers = [
    "unit: Fast unit tests using mocks",
    "integration: Real HandBrake CLI integration tests",
    "slow: Tests that take longer to run"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
